# design_restful_apis

./: .gitignore
flask_project/: pyproject.toml
flask_project/lesson_1/: README.md  server.py
flask_project/lesson_2/: .env  README.md  main.py
flask_project/lesson_3/: README.md  db.py  models.py
